--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,4 +23,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
+        export FLASK_APP=web
+        flask run &
         pytest
